--- a/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
+++ b/Dashboard_Project/DashboardProject/DashboardProject/DashboardProject.csproj
@@ -529,22 +529,6 @@
     <Content Include="css\bootstrap.css" />
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\creative.css" />
-    <Content Include="DashboardDocument\PettyCash\0667a646_Pettcash demo.png" />
-    <Content Include="DashboardDocument\PettyCash\0667a646_Pettcash demo.png.png" />
-    <Content Include="DashboardDocument\PettyCash\09323812_ERD.png" />
-    <Content Include="DashboardDocument\PettyCash\4085cd68_Multiple-Product-Receipt-Template-for-Word.png" />
-    <Content Include="DashboardDocument\PettyCash\529a80bf_12218869_1653732681506297_876492383_o.jpg" />
-    <Content Include="DashboardDocument\PettyCash\58e07244_print of petty cash examle.jpg" />
-    <Content Include="DashboardDocument\PettyCash\590768ed_Pettcash demo.jpg" />
-    <Content Include="DashboardDocument\PettyCash\590768ed_Pettcash demo.png" />
-    <Content Include="DashboardDocument\PettyCash\6721eadd_Info.png" />
-    <Content Include="DashboardDocument\PettyCash\795cc9d4_Multiple-Product-Receipt-Template-for-Word.png" />
-    <Content Include="DashboardDocument\PettyCash\8b7f93cb_12218869_1653732681506297_876492383_o.jpg" />
-    <Content Include="DashboardDocument\PettyCash\917bb404_Multiple-Product-Receipt-Template-for-Word.png" />
-    <Content Include="DashboardDocument\PettyCash\b8ec1b72_Multiple-Product-Receipt-Template-for-Word.png" />
-    <Content Include="DashboardDocument\PettyCash\c35a8228_Pettcash demo.png" />
-    <Content Include="DashboardDocument\PettyCash\e1f8ddbe_Multiple-Product-Receipt-Template-for-Word.png" />
-    <Content Include="DashboardDocument\PettyCash\ee061682_Multiple-Product-Receipt-Template-for-Word.png" />
     <Content Include="DashboardProject.csproj.vspscc" />
     <Content Include="Default.aspx" />
     <Content Include="Default_New.aspx" />
@@ -760,53 +744,11 @@
     <Content Include="Modules\SBApp\TransportRequestForm.aspx" />
     <Content Include="Modules\SBApp\UserAuthorizationRequest.aspx" />
     <Content Include="NoRightsUser.aspx" />
-    <Content Include="pages\blank.html" />
-    <Content Include="pages\buttons.html" />
-    <Content Include="pages\flot.html" />
-    <Content Include="pages\forms.html" />
-    <Content Include="pages\grid.html" />
-    <Content Include="pages\icons.html" />
-    <Content Include="pages\index.html" />
-    <Content Include="pages\login.html" />
-    <Content Include="pages\morris.html" />
-    <Content Include="pages\notifications.html" />
-    <Content Include="pages\panels-wells.html" />
-    <Content Include="pages\tables.html" />
-    <Content Include="pages\typography.html" />
     <Content Include="Scripts\bootstrap-datetimepicker.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\footable.min.js" />
-    <Content Include="DashboardDocument\DeadStockDoc\419de11d_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\DeadStockDoc\f4ee22c8_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\DeadStockDoc\6554c6a9_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\DeadStockDoc\9b5fcf5f_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\DeadStockDoc\b5013066_8fa2940_5155smart.pdf" />
-    <Content Include="DashboardDocument\DeadStockDoc\e8a608cf_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\DeadStockDoc\fc8357b7_8fa2940_5155smart.pdf" />
-    <Content Include="DashboardDocument\QuotationApprovalWorkflow\3e1c1bd4_accp-pro.pdf" />
-    <Content Include="DashboardDocument\QuotationApprovalWorkflow\49ce6809_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\QuotationApprovalWorkflow\c2d8279a_accp-pro.pdf" />
-    <Content Include="DashboardDocument\QuotationApprovalWorkflow\QuotationApprovalWorkflow38f39588_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\QuotationApprovalWorkflow\QuotationApprovalWorkflow43251d74_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\QuotationApprovalWorkflow\QuotationApprovalWorkflow727231b1_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\QuotationApprovalWorkflow\QuotationApprovalWorkflow9de8f94c_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\QuotationApprovalWorkflow\QuotationApprovalWorkflowcf67a398_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\10711806_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\3fb4fe7f_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\52e594de_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\6780282d_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\69a4e93e_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\6a438d21_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\835393d8_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\965e55a8_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\b152fa2a_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\bccc2500_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\c2044c46_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\c8e84763_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\cd4c3e86_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\InvoiceWorkflow\cfe33b3b_11e62940_4606smart.pdf" />
     <None Include="Properties\PublishProfiles\PublishDashboard.pubxml" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
@@ -1838,125 +1780,6 @@
     </Content>
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
-    <Content Include="DashboardDocument\DeadStock\117967a5_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\DeadStock\419de11d_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\DeadStock\6554c6a9_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\DeadStock\9b5fcf5f_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\DeadStock\b5013066_8fa2940_5155smart.pdf" />
-    <Content Include="DashboardDocument\DeadStock\e8a608cf_11e62940_4606smart.pdf" />
-    <Content Include="DashboardDocument\DeadStock\fc8357b7_8fa2940_5155smart.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\000f6725_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\033c5012_abc %281%29.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\06fdb85e_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\10698852_abc.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\146400e5_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\17b5ed76_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\2832f069_Vendor Creation Form.version 1.0.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\37464dd5_Vendor Creation Form.version 1.0.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\3aa7d2b8_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\3ac5fbbc_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\3ebd974b_abc %281%29.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\4e0eeb18_Vendor Creation Form.version 1.0 Testing.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\5fcbf23c_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\6968bc10_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\7232cd2d_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\759605f5_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\7ac1130d_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\7ad60019_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\8605c341_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\8b7b0ce8_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\8f0ddc5e_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\9086eead_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\944c133c_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\96022afd_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\9c530b02_testing dashboard petty cash.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\a0bbe912_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\a3b000ba_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\acb322c5_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\b3617786_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\b3fc0839_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\bac152a9_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\bca78a44_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\bda09570_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\c1f5cb04_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\cc24b5b6_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\d1364e49_abc %281%29.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\e5cc8ab9_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\ec9a972a_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\ecf3197e_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\ef098077_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\f0dd84af_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\f3c00337_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\fc99fad4_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\DeliveryChallanWorkflow\ff1addfc_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\OtherDocument\MM17%28MLP%29.pdf" />
-    <Content Include="DashboardDocument\PettyCash\0a4b4e01_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\0b7e44c8_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\PettyCash\0c133b2c_Petty Cash.pdf" />
-    <Content Include="DashboardDocument\PettyCash\11a4cac9_Petty Cash.pdf" />
-    <Content Include="DashboardDocument\PettyCash\26655cd4_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\29d2a1a0_Testing File.pdf" />
-    <Content Include="DashboardDocument\PettyCash\2f9d00b8_Petty Cash.pdf" />
-    <Content Include="DashboardDocument\PettyCash\3901d91c_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\3d115736_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\418f40fa_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\50445ca8_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\52640313_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\52b29165_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\53d62a78_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\5812eed3_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\59364164_Petty Cash.pdf" />
-    <Content Include="DashboardDocument\PettyCash\61bab5ff_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\629d59b1_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\644cf1d7_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\724c6264_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\729b5531_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\73db7445_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\7ba2ad3f_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\7c59a795_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\82442dc8_Petty Cash.pdf" />
-    <Content Include="DashboardDocument\PettyCash\82eaf86c_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\83d415c6_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\87ebf241_abc.pdf" />
-    <Content Include="DashboardDocument\PettyCash\888c94ca_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\8976da81_Petty Cash.pdf" />
-    <Content Include="DashboardDocument\PettyCash\91e218d3_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\92dde433_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\PettyCash\9460631c_abc.pdf" />
-    <Content Include="DashboardDocument\PettyCash\9872e050_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\98c47b61_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\9d237f82_MMD Final Version.pd.pdf" />
-    <Content Include="DashboardDocument\PettyCash\9d237f82_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\a26d185e_Petty Cash.pdf" />
-    <Content Include="DashboardDocument\PettyCash\a95312d9_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\b31db9c6_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\b958e762_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\bb82dd73_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\bc75a310_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\beccd0a2_Petty Cash.pdf" />
-    <Content Include="DashboardDocument\PettyCash\c1a916db_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\c367926f_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\c70f13a0_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\cbdf12f1_Panel.pdf" />
-    <Content Include="DashboardDocument\PettyCash\d4586b5d_Petty Cash.pdf" />
-    <Content Include="DashboardDocument\PettyCash\da469daf_Petty Cash.pdf" />
-    <Content Include="DashboardDocument\PettyCash\dc944e08_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\dd209797_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\dda55cd2_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\dda55cd2_MMD Final Version.pdf.pdf" />
-    <Content Include="DashboardDocument\PettyCash\df7f1d3c_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\dfb2cdfb_e782bd0_4812smart.pdf" />
-    <Content Include="DashboardDocument\PettyCash\e0eada92_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\e37c6a26_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\e4a67ce5_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\e4e222d4_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\e50d0107_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\f1d1eb41_petty cash unit 1.pdf" />
-    <Content Include="DashboardDocument\PettyCash\f7b59fd1_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\f8273932_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\fd5a6e09_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\ffe23a08_MMD Final Version.pdf" />
-    <Content Include="DashboardDocument\PettyCash\pettycashunit1.pdf" />
     <Content Include="font-awesome\fonts\fontawesome-webfont.eot" />
     <Content Include="font-awesome\fonts\fontawesome-webfont.ttf" />
     <Content Include="font-awesome\fonts\fontawesome-webfont.woff" />
@@ -2017,7 +1840,14 @@
     <Folder Include="css\Classes\" />
     <Folder Include="css\Code\" />
     <Folder Include="css\Content\" />
+    <Folder Include="DashboardDocument\DeadStockDoc\" />
+    <Folder Include="DashboardDocument\DeadStock\" />
+    <Folder Include="DashboardDocument\DeliveryChallanWorkflow\" />
     <Folder Include="DashboardDocument\InventoryAdjustment\" />
+    <Folder Include="DashboardDocument\InvoiceWorkflow\" />
+    <Folder Include="DashboardDocument\OtherDocument\" />
+    <Folder Include="DashboardDocument\PettyCash\" />
+    <Folder Include="DashboardDocument\QuotationApprovalWorkflow\" />
     <Folder Include="js\bin\" />
     <Folder Include="js\bower_components\" />
     <Folder Include="js\Classes\" />
